--- a/ILovePizza/public/css/main.css
+++ b/ILovePizza/public/css/main.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200');
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");
 
+/* Tag generici */
 header{
     background-image: url(/img/bg-pizza.jpg);
     background-position: center;
@@ -8,8 +9,54 @@ header{
     height:auto;
 }
 
+body {
+    overflow-x: hidden;
+    overflow-y: hidden;
+	font-family: "DM Sans", sans-serif;
+	background-color: #f2f5f7;
+	line-height: 1.5;
+	min-height: 300vh;
+	position: relative;
+}
+
+a{
+    text-decoration: none;
+    color: rgb(213, 213, 213);
+    display: flex;
+    align-items: center;
+    font-family: 'calibri';
+}
+
+footer{
+    z-index: 100;
+    width: 100%;
+    height: 12%;
+    display: block;
+    background-color: #07051a;
+    position: fixed;
+    bottom: 0;
+    text-align: center;
+    padding: 10px;
+}
+
+small{
+    color: #07051a;
+}
+
 #nav{
     align-self: center;
+}
+
+.side-info-section{
+    padding-top:15px; 
+    padding-bottom:15px; 
+    padding-left:30px; 
+    max-width:100%;
+}
+
+hr.rounded {
+    border-top: 3px solid rgba(92, 92, 92, 0.1);
+    border-radius: 5px;  
 }
 
 *,
@@ -31,16 +78,6 @@ header{
 	--header-bg: #fff;
 }
 
-body {
-    overflow-x: hidden;
-    overflow-y: hidden;
-	font-family: "DM Sans", sans-serif;
-	background-color: #f2f5f7;
-	line-height: 1.5;
-	min-height: 300vh;
-	position: relative;
-}
-
 .responsive-wrapper {
 	width: 90%;
 	max-width: 1280px;
@@ -53,23 +90,25 @@ body {
 	height: var(--header-inner-height);
 	position: sticky;
 	top: 0;
-
 	/* Other */
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
 }
 
+
 /* Styling of other elements */
 .header-logo img {
 	display: block;
 	height: calc(var(--header-inner-height) - 30px);
+    justify-content: start;
 }
 
 .header-navigation {
 	display: flex;
 	flex-wrap: wrap;
     border: 0;
+    justify-content: end;
 }
 
 .header-navigation a span{
@@ -82,7 +121,7 @@ body {
     height: 50px;
     width: 50px;
     text-align: center;
-    text-decoration: none;
+    text-decoration: none;   
 }
 
 .header-navigation a span:hover{
@@ -148,16 +187,6 @@ body {
 	font-weight: 700;
 }
 
-@media (min-width: 800px) {
-	.header-navigation a {
-		display: inline-block;
-	}
-
-	.header-navigation #search-bar {
-		display: none;
-	}
-}
-
 /* Menu */
 #main-container{
     display: flex;
@@ -182,14 +211,6 @@ body {
     transition: .3;
     margin-bottom: 20px;
     padding-left: 20px;
-}
-
-a{
-    text-decoration: none;
-    color: rgb(213, 213, 213);
-    display: flex;
-    align-items: center;
-    font-family: 'calibri';
 }
 
 .material-symbols-outlined{
@@ -282,7 +303,6 @@ li span:nth-child(2){
     color: white;
 }
 
-
 #clear-btn {
   display: none;
   position: absolute;
@@ -295,4 +315,26 @@ li span:nth-child(2){
 
 #search-bar:valid a {
   display: block;
+}
+
+#sezione-mebri{
+    display: none;
+}
+
+/* Dimensioni in base allo schermo */
+
+@media (min-width: 800px) {
+	.header-navigation a {
+		display: inline-block;
+	}
+
+	.header-navigation #search-bar {
+		display: none;
+	}
+}
+
+@media (min-height: 850px) {
+    #sezione-mebri{
+        display: block;
+    }
 }
