--- a/ILovePizza/public/css/main.css
+++ b/ILovePizza/public/css/main.css
@@ -27,18 +27,6 @@ a{
     font-family: 'calibri';
 }
 
-footer{
-    z-index: 100;
-    width: 100%;
-    height: 12%;
-    display: block;
-    background-color: #07051a;
-    position: fixed;
-    bottom: 0;
-    text-align: center;
-    padding: 10px;
-}
-
 small{
     color: #07051a;
 }
@@ -102,6 +90,12 @@ hr.rounded {
 	display: block;
 	height: calc(var(--header-inner-height) - 30px);
     justify-content: start;
+    height: 45px;
+    width: 45px;
+    position: relative;
+    border-radius: 100%;
+    box-shadow: 1px 1px 2rem rgba(0, 0, 0, 0.3);
+    z-index: 1;
 }
 
 .header-navigation {
@@ -337,4 +331,147 @@ li span:nth-child(2){
     #sezione-mebri{
         display: block;
     }
+}
+
+/* Footer */
+
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap");
+
+/* footer{
+    z-index: 100;
+    width: 100%;
+    height: 10%;
+    display: block;
+    background-color: #07051a;
+    position: fixed;
+    bottom: 0;
+    text-align: center;
+    padding: 10px;
+} */
+
+/* footer small{
+    color: #fff;
+    font-size: .5rem;
+	font-weight: 500;
+	line-height: .2rem;
+    display: inline;
+} */
+
+footer {
+
+    bottom: 0;
+  position: fixed;
+  width: 100%;
+  
+  background: #3586ff;
+  min-height: 100px;
+  padding: 20px 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.social-icon,
+.menu_info {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px 0;
+  flex-wrap: wrap;
+}
+
+.social-icon__item,
+.menu__item {
+  list-style: none;
+}
+
+.social-icon__link {
+  font-size: 2rem;
+  color: #fff;
+  margin: 0 10px;
+  display: inline-block;
+  transition: 0.5s;
+}
+.social-icon__link:hover {
+  transform: translateY(-10px);
+}
+
+.menu__link {
+  font-size: 1.2rem;
+  color: #fff;
+  margin: 0 10px;
+  display: inline-block;
+  transition: 0.5s;
+  text-decoration: none;
+  opacity: 0.75;
+  font-weight: 300;
+}
+
+.menu__link:hover {
+  opacity: 1;
+}
+
+.footer p {
+  color: #fff;
+  margin: 15px 0 10px 0;
+  font-size: 1rem;
+  font-weight: 300;
+}
+
+.wave {
+  position: absolute;
+  top: -100px;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  background: url("https://i.ibb.co/wQZVxxk/wave.png");
+  background-size: 1000px 100px;
+}
+
+.wave#wave1 {
+  z-index: 1000;
+  opacity: 1;
+  bottom: 0;
+  animation: animateWaves 4s linear infinite;
+}
+
+.wave#wave2 {
+  z-index: 999;
+  opacity: 0.5;
+  bottom: 10px;
+  animation: animate 4s linear infinite !important;
+}
+
+.wave#wave3 {
+  z-index: 1000;
+  opacity: 0.2;
+  bottom: 15px;
+  animation: animateWaves 3s linear infinite;
+}
+
+.wave#wave4 {
+  z-index: 999;
+  opacity: 0.7;
+  bottom: 20px;
+  animation: animate 3s linear infinite;
+}
+
+@keyframes animateWaves {
+  0% {
+    background-position-x: 1000px;
+  }
+  100% {
+    background-positon-x: 0px;
+  }
+}
+
+@keyframes animate {
+  0% {
+    background-position-x: -1000px;
+  }
+  100% {
+    background-positon-x: 0px;
+  }
 }
