--- a/ILovePizza/public/css/thread-card.css
+++ b/ILovePizza/public/css/thread-card.css
@@ -13,6 +13,10 @@
   margin-top: 5%;
   margin-bottom: 2%;
 }
+.newOrExplore-container-copy{
+  padding: .5rem 2rem 2rem 5rem;
+  margin-bottom: 2%;
+}
 
 .img-pod {
   height:50px;
@@ -27,6 +31,13 @@
 
   left: 2%;
   top: 2%;
+}
+
+@media screen and (max-width: 770px) {
+  .img-pod{
+    left: 5%;
+    top: 5%;
+  }
 }
 
 .user-icon {
@@ -52,18 +63,13 @@ h3, h5, #new-post-title{
 }
 
 #new-post-title{
-    border: none;
-    align-self: self-start;
     margin-bottom: 10px;
-    width: 100%;
-    height: 74px;
+    height: 50px;
     display: inline-block;
-    margin-left: 58px;
-    margin-top: 47px;
-    margin-bottom: 37px;
-    background-color: #d7d7d7;
-    border-radius: 25px;
-    text-align: center;
+    width: 100%;
+    border-top: none;
+    border-left: none;
+    border-right: none;
 }
 
 p {
@@ -71,20 +77,15 @@ p {
   font-size: 1rem;
   line-height: 1.45;
   color: #333;
-}
+} 
 
 #new-post-textarea{
-    align-self: flex-start;
     resize: none;
-    width: 100%;
-    height: 401px;
     display: inline-block;
-    margin-bottom: 40px;
-    margin-left: 58px;
-    background-color: #d7d7d7;
     border-radius: 25px;
     text-justify: distribute;
     text-align: center;
+    height: 150px;
 }
 
 .btn-primary {
@@ -121,10 +122,8 @@ p {
     color: white;
     font-size: 1.2rem;
     box-shadow: 1px 10px 2rem  #46518A;
-    position: absolute;
-    bottom: 40px; 
-    right: 50px;
-    width: 70%;
+    position: relative;
+    margin-top: 10%;
   }
   
   .btn-primary-new-post:hover {
@@ -158,4 +157,83 @@ p {
     position: absolute;
     bottom: 186px; 
     right: 50px;
+  }
+
+  .drop-container {
+    position: relative;
+    display: flex;
+    gap: 10px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    padding: 20px;
+    border-radius: 10px;
+    border: 2px dashed #555;
+    color: #444;
+    cursor: pointer;
+    transition: background .2s ease-in-out, border .2s ease-in-out;
+    overflow: hidden;
+    position: relative;
+  }
+
+  .load-up{
+    z-index: 2;
+  }
+
+  .blurry-background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    filter: blur(10px);  
+    z-index: -1;
+}
+  
+  .drop-container:hover,
+  .drop-container.drag-active {
+    background: #eee;
+    border-color: #111;
+  }
+  
+  .drop-container:hover .drop-title,
+  .drop-container.drag-active .drop-title {
+    color: #222;
+  }
+  
+  .drop-title {
+    color: #444;
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+    transition: color .2s ease-in-out;
+  }
+  
+  input[type=file] {
+    width: 350px;
+    max-width: 100%;
+    color: #444;
+    padding: 5px;
+    background: #fff;
+    border-radius: 10px;
+    border: 1px solid #555;
+  }
+  
+  input[type=file]::file-selector-button {
+    margin-right: 20px;
+    border: none;
+    background: #084cdf;
+    padding: 10px 20px;
+    border-radius: 10px;
+    color: #fff;
+    cursor: pointer;
+    transition: background .2s ease-in-out;
+  }
+  
+  input[type=file]::file-selector-button:hover {
+    background: #0d45a5;
   }
