--- a/ILovePizza/public/css/main.css
+++ b/ILovePizza/public/css/main.css
@@ -6,6 +6,7 @@ header{
     background-image: url(/img/bg-pizza.jpg);
     background-position: center;
     background-size: cover;
+
     height:auto;
 }
 
@@ -198,6 +199,9 @@ hr.rounded {
     backdrop-filter: blur(5px);
     min-height: 100vh;
 }
+.menu-content{
+    padding-left: 0;
+}
 
 .menu-content li{
     list-style: none;
@@ -337,35 +341,13 @@ li span:nth-child(2){
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap");
 
-/* footer{
-    z-index: 100;
-    width: 100%;
-    height: 10%;
-    display: block;
-    background-color: #07051a;
-    position: fixed;
-    bottom: 0;
-    text-align: center;
-    padding: 10px;
-} */
-
-/* footer small{
-    color: #fff;
-    font-size: .5rem;
-	font-weight: 500;
-	line-height: .2rem;
-    display: inline;
-} */
-
 footer {
-
     bottom: 0;
   position: fixed;
   width: 100%;
-  
-  background: #3586ff;
-  min-height: 100px;
-  padding: 20px 50px;
+
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 1), #46518A);
+  min-height: 75px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -378,7 +360,7 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 10px 0;
+  margin: 2px 0;
   flex-wrap: wrap;
 }
 
@@ -388,14 +370,15 @@ footer {
 }
 
 .social-icon__link {
-  font-size: 2rem;
-  color: #fff;
+  font-size: 1.5rem;
+  color: #F9FAFF;
   margin: 0 10px;
   display: inline-block;
   transition: 0.5s;
 }
 .social-icon__link:hover {
   transform: translateY(-10px);
+  color: #46518A;
 }
 
 .menu__link {
@@ -415,63 +398,17 @@ footer {
 
 .footer p {
   color: #fff;
-  margin: 15px 0 10px 0;
+  margin: 5px 0 5px 0;
   font-size: 1rem;
   font-weight: 300;
 }
 
-.wave {
-  position: absolute;
-  top: -100px;
-  left: 0;
-  width: 100%;
-  height: 100px;
-  background: url("https://i.ibb.co/wQZVxxk/wave.png");
-  background-size: 1000px 100px;
+.corp{
+    height: 700px;
 }
 
-.wave#wave1 {
-  z-index: 1000;
-  opacity: 1;
-  bottom: 0;
-  animation: animateWaves 4s linear infinite;
-}
-
-.wave#wave2 {
-  z-index: 999;
-  opacity: 0.5;
-  bottom: 10px;
-  animation: animate 4s linear infinite !important;
-}
-
-.wave#wave3 {
-  z-index: 1000;
-  opacity: 0.2;
-  bottom: 15px;
-  animation: animateWaves 3s linear infinite;
-}
-
-.wave#wave4 {
-  z-index: 999;
-  opacity: 0.7;
-  bottom: 20px;
-  animation: animate 3s linear infinite;
-}
-
-@keyframes animateWaves {
-  0% {
-    background-position-x: 1000px;
-  }
-  100% {
-    background-positon-x: 0px;
-  }
-}
-
-@keyframes animate {
-  0% {
-    background-position-x: -1000px;
-  }
-  100% {
-    background-positon-x: 0px;
-  }
+@media screen and (max-height: 1150px) {
+    .corp{
+        height: 450px;
+    }
 }
