--- a/ILovePizza/public/css/thread-card.css
+++ b/ILovePizza/public/css/thread-card.css
@@ -8,14 +8,30 @@
   position: relative;
 }
 
+#blog-post-card{
+  background: #fff;
+  max-width: 100%;
+  border-radius: 10px;
+  box-shadow: 1px 1px 2rem rgba(0, 0, 0, 0.3);
+  position: relative;
+}
+
+@media (max-width: 1200px) {
+  .img-thread{
+    display: none;
+  }
+}
+
 .container-copy {
   padding: 2rem 2rem 2rem 5rem;
   margin-top: 5%;
   margin-bottom: 2%;
 }
+
 .newOrExplore-container-copy{
   padding: .5rem 2rem 2rem 5rem;
   margin-bottom: 2%;
+
 }
 
 .img-pod {
@@ -29,15 +45,21 @@
   align-items: center;
   justify-content: center;
 
-  left: 2%;
-  top: 2%;
+  left: 1%;
+  top: 1%;
 }
 
-@media screen and (max-width: 770px) {
-  .img-pod{
-    left: 5%;
-    top: 5%;
-  }
+.img-pod-card{
+  height:50px;
+  width: 50px;
+  background: linear-gradient(90deg, #46518A, #C29586);
+  z-index: 10;
+  border-radius: 100%;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
 }
 
 .user-icon {
