--- a/ILovePizza/public/css/login.css
+++ b/ILovePizza/public/css/login.css
@@ -10,7 +10,7 @@ body {
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
-	font-family: 'Montserrat', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 	height: 100vh;
 	margin: -20px 0 50px;
 }
