--- a/ILovePizza/public/css/main.css
+++ b/ILovePizza/public/css/main.css
@@ -6,7 +6,6 @@ header{
     background-image: url(/img/bg-pizza.jpg);
     background-position: center;
     background-size: cover;
-
     min-height: 75px
 }
 
@@ -18,6 +17,7 @@ body {
 	line-height: 1.5;
 	min-height: 300vh;
 	position: relative;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 }
 
 a{
@@ -52,6 +52,18 @@ hr.rounded {
 *:after,
 *:before {
 	box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+i,
+i:after,
+i:before,
+span,
+span:after,
+span:before{
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
