--- a/ILovePizza/public/css/main.css
+++ b/ILovePizza/public/css/main.css
@@ -405,3 +405,10 @@ footer {
         height: 450px;
     }
 }
+
+.information-img{
+    min-width: 350px;  
+    min-height:350px;
+    object-fit:cover;
+    object-position: 50% 50%;
+}
