--- a/ILovePizza/public/css/thread-card.css
+++ b/ILovePizza/public/css/thread-card.css
@@ -259,3 +259,10 @@ p {
   input[type=file]::file-selector-button:hover {
     background: #0d45a5;
   }
+
+  .background-image{
+    object-fit: cover;
+    width: 100%; 
+    height: auto;
+    filter: blur(5px)
+  } 
