--- a/ILovePizza/public/css/main.css
+++ b/ILovePizza/public/css/main.css
@@ -85,8 +85,11 @@ span:before{
     width: 50px;
     position: relative;
     border-radius: 50px;
-    box-shadow: 1px 1px 2rem rgba(0, 0, 0, 0.3);
     z-index: 1;
+}
+.header-logo img:hover {
+    box-shadow: 0px 5px 1rem #46518A;
+    transition: all 1s;
 }
 
 .header-navigation {
