--- a/ILovePizza/public/css/main.css
+++ b/ILovePizza/public/css/main.css
@@ -44,7 +44,12 @@ small{
 }
 
 hr.rounded {
-    border-top: 3px solid rgba(92, 92, 92, 0.1);
+    border-top: 3px solid rgba(92, 92, 92, 0.339);
+    border-radius: 5px;  
+}
+
+hr{
+    border-top: 3px solid rgba(92, 92, 92, 0.339);
     border-radius: 5px;  
 }
 
@@ -77,7 +82,7 @@ span:before{
 		var(--header-outer-height) - var(--header-inner-height)
 	);
 	--header-bg: #fff;
-}
+} 
 
 /* Styling of other elements */
 .header-logo img {
@@ -203,6 +208,34 @@ span:before{
     padding-left: 20px;
 }
 
+/* WebKit (Chrome, Safari) */
+::-webkit-scrollbar {
+    width: 8px; /* Larghezza della barra di scorrimento */
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #C29586; /* Colore della parte trascinabile della barra di scorrimento */
+    border-radius: 6px; /* Bordo arrotondato */
+}
+
+::-webkit-scrollbar-track {
+    background-color: #ecf0f1; /* Colore della traccia della barra di scorrimento */
+}
+
+/* Firefox */
+::-moz-scrollbar {
+    width: 8px;
+}
+
+::-moz-scrollbar-thumb {
+    background-color: #C29586;
+    border-radius: 6px;
+}
+
+::-moz-scrollbar-track {
+    background-color: #ecf0f1;
+}
+
 .material-symbols-outlined{
     font-size: 25px;
     margin-right: 10px;
@@ -233,7 +266,7 @@ span:before{
 
 /* search-bar */
 
-#search-bar{
+#search-form{
     position: relative;
     top: 50%;
     left: 50%;
@@ -244,13 +277,11 @@ span:before{
     background: #46518A;
     box-sizing: border-box;
     border-radius: 25px;
-    border: 4px solid white;
+    border: 4px solid #46518A;
     padding: 5px;
-    box-shadow: 0px 5px 1rem #46518A;
 }
 
-
-#search-bar #search{
+#search-input{
     position: absolute;
     top: 0;
     left: 0;
@@ -259,10 +290,10 @@ span:before{
     line-height: 30px;
     outline: 0;
     border: 0;
-    display: none;
     font-size: 1em;
     border-radius: 20px;
     padding: 0 20px;
+    display: none;
 }
 
 .fa{
@@ -274,41 +305,118 @@ span:before{
     top: 0;
     right: 0;
     border-radius: 50%;
-    color: #07051a;
+    color: white;
     text-align: center;
     font-size: 1.2em;
     transition: all 1s;
+    background: #46518A;
 }
 
-#search-bar:hover,
-#search-bar:valid{
+#search-form:hover,
+#search-form:valid{
     width: 200px;
     cursor: pointer;
 }
 
-#search-bar:hover #search,
-#search-bar:valid #search{
+#search-form:hover #search-input,
+#search-form:valid #search-input{
     display: block;
 }
 
-#search-bar:hover .fa,
-#search-bar:valid .fa{
-    background: #46518A;
-    color: white;
+#search-form:hover .fa,
+#search-form:valid .fa{
+    background: white;
+    color: #46518A;
 }
 
-#clear-btn {
-  display: none;
-  position: absolute;
-  inset: 0;
-  font-size: 20px;
-  color: white;
-  text-align: center; 
-  width: 100%;
+.search-pannel {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: left;
+    flex-direction: column;
+    margin: 2vh 0 0 0;
+    padding: 0;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0px 5px 1rem #46518A;
+    position: absolute;
+    top: calc(50% + 25px); /* Altezza della barra di ricerca più metà del bordo */
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 9999;
+    display: none;
+    width: 600px;
+    max-height: 350px;
+    min-height: 75px;
 }
 
-#search-bar:valid a {
-  display: block;
+.search-pannel::before {
+    content: "";
+    position: absolute;
+    top: -20px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 0 15px 20px 15px;
+    border-color: transparent transparent #ffffff transparent;
+    clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+    box-shadow: 0 0 10rem #46518A;
+}
+
+.search-pannel li {
+    list-style: none;
+    width: 100%;
+    height: 100%;
+    margin: 15px 35px 15px 35px;
+    border-radius: 10px;
+    padding: 10px;
+    background-color: #46518A;
+    color: #ffffff;
+    cursor: pointer;
+    box-shadow: 0px 5px 1rem #46518A;
+    transition: 3s;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
+.search-pannel li small {
+    text-align: right;
+    white-space: nowrap;
+    margin-right: 0;
+    text-decoration: none;
+    color: rgb(213, 213, 213);
+    font-family: 'calibri';
+    font-size: 1rem;
+}
+
+#search-results{
+    max-height: 325px;
+    overflow-y: auto;
+    margin: 5px;
+    padding: 0;
+}
+
+.search-pannel li:hover {
+    animation: pulse 3s infinite;
+}
+
+@keyframes pulse {
+    0%,100% {transform: scale(1);}
+    50% {transform: scale(1.1);}
+}
+
+.search-pannel {
+    opacity: 1;
+}
+
+.search-pannel { animation: fadeIn 1s;}
+@keyframes fadeIn {
+    0% { opacity: 0; }
+    50% { opacity: 0.5; }
+    100% { opacity: 1; }
 }
 
 #sezione-mebri{
@@ -322,7 +430,7 @@ span:before{
 		display: inline-block;
 	}
 
-	.header-navigation #search-bar {
+	.header-navigation #search-form {
 		display: none;
 	}
 }
@@ -409,9 +517,17 @@ footer {
     }
 }
 
-.information-img{
+.img-thread{
+    max-width: 350px;  
+    max-height: 350px;
     min-width: 350px;  
     min-height:350px;
     object-fit:cover;
     object-position: 50% 50%;
+}
+
+@media (max-width: 1200px) {
+    .sec-img{
+      display: none;
+    }
 }
