--- a/ILovePizza/public/css/thread-card.css
+++ b/ILovePizza/public/css/thread-card.css
@@ -16,12 +16,6 @@
   position: relative;
 }
 
-@media (max-width: 1200px) {
-  .img-thread{
-    display: none;
-  }
-}
-
 .container-copy {
   padding: 2rem 2rem 2rem 5rem;
   margin-top: 5%;
@@ -29,9 +23,15 @@
 }
 
 .newOrExplore-container-copy{
-  padding: .5rem 2rem 2rem 5rem;
-  margin-bottom: 2%;
+  padding: 10px 50px 20px;
+  margin: 1em;
+}
 
+@media (max-width: 1200px) {
+  .newOrExplore-container-copy{
+    padding: 30px 50px 40px;
+    margin: 1em;
+  }
 }
 
 .img-pod {
