--- a/ILovePizza/public/css/main.css
+++ b/ILovePizza/public/css/main.css
@@ -531,3 +531,34 @@ footer {
       display: none;
     }
 }
+
+.filter-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.filter-container input{
+
+    box-shadow: 1px 1px 2rem rgba(0, 0, 0, 0.3);
+}
+
+.filter-container input:focus{
+    box-shadow: 0px 5px 1rem  rgba(0, 0, 0, 0.3);
+    transition: all 0.2s ease-out;
+    animation: pulse 3s infinite;
+}
+
+
+
+@keyframes pulse {
+    0%,100% {transform: scale(1);}
+    50% {transform: scale(1.1);}
+}
+
+input{
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
