--- a/ILovePizza/public/css/thread-card.css
+++ b/ILovePizza/public/css/thread-card.css
@@ -69,6 +69,8 @@
   border-radius: 100%;
   box-shadow: 1px 1px 2rem rgba(0, 0, 0, 0.3);
   z-index: 1;
+  object-fit: cover;
+  object-position: 50% 50%;
 }
 
 h6 {
@@ -106,8 +108,8 @@ p {
     display: inline-block;
     border-radius: 25px;
     text-justify: distribute;
-    text-align: center;
-    height: 150px;
+    
+    height: 100px;
 }
 
 .btn-primary {
@@ -266,3 +268,26 @@ p {
     height: auto;
     filter: blur(5px)
   } 
+
+  .input-form{
+    border: none;
+    border-bottom: solid 1px #999;
+    width: 100%;
+    border-radius: 0;
+  }
+
+  .like-btn{
+    background: none;
+    border: none;
+    width: fit-content;
+  }
+
+  .like-container{
+    display: flex;
+    align-items: end;
+    justify-content: end;
+    width: 100%;
+    bottom: 10%;
+    position: relative;
+  }
+
