Aggiunta della creazione commenti

--- a/ILovePizza/public/css/assosiation-box.css
+++ b/ILovePizza/public/css/assosiation-box.css
@@ -1,42 +1,44 @@
-.list-user{
+.list-user {
     width: 100%;
 }
 
 .list-user .btn {
-    color:#FFFFFF; 
+    color: #ffffff;
     padding: 5px !important;
-    font-size: 12px !important; 
-    margin-left:20px;
+    font-size: 12px !important;
+    margin-left: 20px;
 }
 .list-user label {
-    font-size:12px;    
+    font-size: 12px;
 }
 
-.prj-name{
-    font-weight:bold;
-    color:black;
+.prj-name {
+    font-weight: bold;
+    color: black;
 }
 
-.user-item img, .user-item h6 {
-    display:inline-block;
-    
+.user-item img,
+.user-item h6 {
+    display: inline-block;
 }
- 
-.list-user .btn .user-item h6 a{
-    color:black; 
+
+.list-user .btn .user-item h6 a {
+    color: black;
     padding: 15% !important;
-    font-size: 12px !important; 
+    font-size: 12px !important;
 }
 
 li:hover img {
-    transform: scale(1.2); /* Ingrandisce l'immagine al passaggio del mouse sul link */
-    box-shadow: 0px 5px 1rem  #46518A;
-  transition: all 0.2s ease-out;
-  color: white;
+    transform: scale(
+        1.2
+    ); /* Ingrandisce l'immagine al passaggio del mouse sul link */
+    box-shadow: 0px 5px 1rem #46518a;
+    transition: all 0.2s ease-out;
+    color: white;
 }
 
 .img-user {
-  transition: transform 0.3s ease; /* Aggiunge una transizione per rendere fluido l'ingrandimento */
-  background: linear-gradient(90deg, #46518A, #C29586);
-  border-radius: 100%;
+    transition: transform 0.3s ease; /* Aggiunge una transizione per rendere fluido l'ingrandimento */
+    background: linear-gradient(90deg, #46518a, #c29586);
+    border-radius: 100%;
 }
