--- a/ILovePizza/public/css/main.css
+++ b/ILovePizza/public/css/main.css
@@ -1,62 +1,63 @@
-@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200');
+@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200");
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");
 
 /* Tag generici */
-header{
+header {
     background-image: url(/img/bg-pizza.jpg);
     background-position: center;
     background-size: cover;
-    min-height: 75px
+    min-height: 75px;
 }
 
 body {
     overflow-x: hidden;
     overflow-y: hidden;
-	font-family: "DM Sans", sans-serif;
-	background-color: #f2f5f7;
-	line-height: 1.5;
-	min-height: 300vh;
-	position: relative;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    font-family: "DM Sans", sans-serif;
+    background-color: #f2f5f7;
+    line-height: 1.5;
+    min-height: 300vh;
+    position: relative;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+        "Helvetica Neue", Arial, sans-serif;
 }
 
-a{
+a {
     text-decoration: none;
     color: rgb(213, 213, 213);
     display: flex;
     align-items: center;
-    font-family: 'calibri';
+    font-family: "calibri";
 }
 
-small{
+small {
     color: #07051a;
 }
 
-#nav{
+#nav {
     align-self: center;
 }
 
-.side-info-section{
-    padding-top:15px; 
-    padding-bottom:15px; 
-    padding-left:30px; 
-    max-width:100%;
+.side-info-section {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-left: 30px;
+    max-width: 100%;
 }
 
 hr.rounded {
     border-top: 3px solid rgba(92, 92, 92, 0.339);
-    border-radius: 5px;  
+    border-radius: 5px;
 }
 
-hr{
+hr {
     border-top: 3px solid rgba(92, 92, 92, 0.339);
-    border-radius: 5px;  
+    border-radius: 5px;
 }
 
 *,
 *:after,
 *:before {
-	box-sizing: border-box;
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -67,22 +68,22 @@ i:after,
 i:before,
 span,
 span:after,
-span:before{
+span:before {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    color: #C29586; /*Per cambiare il colore delle icone*/
+    color: #c29586; /*Per cambiare il colore delle icone*/
 }
 
 :root {
-	--header-outer-height: 110px;
-	--header-inner-height: 70px;
-	--header-height-difference: calc(
-		var(--header-outer-height) - var(--header-inner-height)
-	);
-	--header-bg: #fff;
-} 
+    --header-outer-height: 110px;
+    --header-inner-height: 70px;
+    --header-height-difference: calc(
+        var(--header-outer-height) - var(--header-inner-height)
+    );
+    --header-bg: #fff;
+}
 
 /* Styling of other elements */
 .header-logo img {
@@ -93,102 +94,128 @@ span:before{
     z-index: 1;
 }
 .header-logo img:hover {
-    box-shadow: 0px 5px 1rem #46518A;
+    box-shadow: 0px 5px 1rem #46518a;
     transition: all 1s;
 }
 
 .header-navigation {
-	display: flex;
+    display: flex;
     border: 0;
     justify-content: end;
 }
 
-.header-navigation a span{
+.header-navigation a span {
     font-size: 1.2em;
-	margin-left: 1.75rem;
-	position: relative;
+    margin-left: 1.75rem;
+    position: relative;
     box-sizing: border-box;
     border-radius: 50px;
     border: 4px solid rgb(255, 255, 255);
     height: 50px;
     width: 50px;
     text-align: center;
-    text-decoration: none;   
+    text-decoration: none;
 }
 
-.header-navigation a span:hover{
-    box-shadow: 0px 5px 1rem #46518A;
+.header-navigation a span:hover {
+    box-shadow: 0px 5px 1rem #46518a;
     transition: all 1s;
 }
 
 .header-navigation a {
-	display: none;
-	font-size: 1.125rem;
-	color: inherit;
-	text-decoration: none;
+    display: none;
+    font-size: 1.125rem;
+    color: inherit;
+    text-decoration: none;
 }
 
-.header-navigation a:after{
-	transition: 0.25s ease;
-	content: "";
-	display: block;
-	width: 100%;
-	height: 2px;
-	background-color: currentcolor;
-	transform: scalex(0);
-	position: absolute;
-	bottom: -2px;
-	left: 0;
+.header-navigation a:after {
+    transition: 0.25s ease;
+    content: "";
+    display: block;
+    width: 100%;
+    height: 2px;
+    background-color: currentcolor;
+    transform: scalex(0);
+    position: absolute;
+    bottom: -2px;
+    left: 0;
+}
+
+.notification {
+    display: flex;
+    position: relative;
+    align-items: center;
+    justify-content: center;
+}
+
+.notification #badge-notification {
+    background: red;
+    color: #ffffff;
+    border: none;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    height: 25px;
+    width: 25px;
+    font-size: 15px;
+    box-shadow: none;
+    cursor: default;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .main {
-	margin-top: 3rem;
+    margin-top: 3rem;
 }
 
 .widget {
-	width: 100%;
-	max-width: 600px;
-	border-radius: 8px;
-	box-shadow: 0 15px 30px 0 rgba(0,0,0, 0.1);
-	background-color: #fff;
-	padding: 2.5rem;
-	margin-left: auto;
-	margin-right: auto;
-	margin-bottom: 2rem;
-	font-size: 1.125rem;
+    width: 100%;
+    max-width: 600px;
+    border-radius: 8px;
+    box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.1);
+    background-color: #fff;
+    padding: 2.5rem;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 2rem;
+    font-size: 1.125rem;
 }
 
 .widget > * + * {
-	margin-top: 1.25em;
+    margin-top: 1.25em;
 }
 
 .widget h2 {
-	font-size: 1.5rem;
-	font-weight: 700;
-	line-height: 1.25;
+    font-size: 1.5rem;
+    font-weight: 700;
+    line-height: 1.25;
 }
 
 .widget code {
-	display: inline-block;
-	padding: 0.125em 0.25em;
-	border-radius: 2px;
-	background-color: #bee5d3;
+    display: inline-block;
+    padding: 0.125em 0.25em;
+    border-radius: 2px;
 }
 
 .widget strong {
-	font-weight: 700px;
+    font-weight: 700px;
 }
 
 /* Menu */
-#main-container{
+#main-container {
     display: flex;
     width: 100%;
-    background: linear-gradient(#F9FAFF, #DEFFC2,); /*Modificando questa proprieta cambi lo sfondo al body e menu*/
+    background: linear-gradient(
+        #f9faff
+    ); /*Modificando questa proprieta cambi lo sfondo al body e menu*/
 }
 
-.menu{
+.menu {
     height: 100%;
-    transition: .3s;
+    transition: 0.3s;
     background: #ffffff12;
     padding: 20px 20px 20px 0;
     width: 85px;
@@ -196,14 +223,14 @@ span:before{
     backdrop-filter: blur(5px);
     min-height: 100vh;
 }
-.menu-content{
+.menu-content {
     padding-left: 0;
 }
 
-.menu-content li{
+.menu-content li {
     list-style: none;
     border-radius: 0px 50px 50px 0;
-    transition: .3;
+    transition: 0.3;
     margin-bottom: 20px;
     padding-left: 20px;
 }
@@ -214,7 +241,7 @@ span:before{
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #C29586; /* Colore della parte trascinabile della barra di scorrimento */
+    background-color: #c29586; /* Colore della parte trascinabile della barra di scorrimento */
     border-radius: 6px; /* Bordo arrotondato */
 }
 
@@ -228,7 +255,7 @@ span:before{
 }
 
 ::-moz-scrollbar-thumb {
-    background-color: #C29586;
+    background-color: #c29586;
     border-radius: 6px;
 }
 
@@ -236,56 +263,56 @@ span:before{
     background-color: #ecf0f1;
 }
 
-.material-symbols-outlined{
+.material-symbols-outlined {
     font-size: 25px;
     margin-right: 10px;
-    background: #46518A;
+    background: #46518a;
     border-radius: 50%;
     padding: 10px;
 }
 
-.menu-content li:hover{
-  background: #46518A;  
+.menu-content li:hover {
+    background: #46518a;
 }
 
-.menu-content li span:nth-child(2){
+.menu-content li span:nth-child(2) {
     display: none;
 }
 
-.menu:hover{
+.menu:hover {
     width: 260px;
 }
 
-.menu:hover li span:nth-child(2){
+.menu:hover li span:nth-child(2) {
     display: block;
 }
 
-.menu-content li a:hover{
-    color: #C29586;
+.menu-content li a:hover {
+    color: #c29586;
 }
 
 /* search-bar */
 
-#search-form{
+#search-form {
     position: relative;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     transition: all 1s;
     width: 50px;
     height: 50px;
-    background: #46518A;
+    background: #46518a;
     box-sizing: border-box;
     border-radius: 25px;
-    border: 4px solid #46518A;
+    border: 4px solid #46518a;
     padding: 5px;
 }
 
-#search-input{
+#search-input {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;;
+    width: 100%;
     height: 42.5px;
     line-height: 30px;
     outline: 0;
@@ -296,7 +323,7 @@ span:before{
     display: none;
 }
 
-.fa{
+.fa {
     box-sizing: border-box;
     padding: 10px;
     width: 42.5px;
@@ -309,24 +336,24 @@ span:before{
     text-align: center;
     font-size: 1.2em;
     transition: all 1s;
-    background: #46518A;
+    background: #46518a;
 }
 
 #search-form:hover,
-#search-form:valid{
+#search-form:valid {
     width: 200px;
     cursor: pointer;
 }
 
 #search-form:hover #search-input,
-#search-form:valid #search-input{
+#search-form:valid #search-input {
     display: block;
 }
 
 #search-form:hover .fa,
-#search-form:valid .fa{
+#search-form:valid .fa {
     background: white;
-    color: #46518A;
+    color: #46518a;
 }
 
 .search-pannel {
@@ -339,9 +366,11 @@ span:before{
     padding: 0;
     background-color: white;
     border-radius: 10px;
-    box-shadow: 0px 5px 1rem #46518A;
+    box-shadow: 0px 5px 1rem #46518a;
     position: absolute;
-    top: calc(50% + 25px); /* Altezza della barra di ricerca più metà del bordo */
+    top: calc(
+        50% + 25px
+    ); /* Altezza della barra di ricerca più metà del bordo */
     left: 50%;
     transform: translateX(-50%);
     z-index: 9999;
@@ -363,7 +392,7 @@ span:before{
     border-width: 0 15px 20px 15px;
     border-color: transparent transparent #ffffff transparent;
     clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
-    box-shadow: 0 0 10rem #46518A;
+    box-shadow: 0 0 10rem #46518a;
 }
 
 .search-pannel li {
@@ -373,10 +402,10 @@ span:before{
     margin: 15px 35px 15px 35px;
     border-radius: 10px;
     padding: 10px;
-    background-color: #46518A;
+    background-color: #46518a;
     color: #ffffff;
     cursor: pointer;
-    box-shadow: 0px 5px 1rem #46518A;
+    box-shadow: 0px 5px 1rem #46518a;
     transition: 3s;
     overflow-y: auto;
     overflow-x: hidden;
@@ -388,11 +417,11 @@ span:before{
     margin-right: 0;
     text-decoration: none;
     color: rgb(213, 213, 213);
-    font-family: 'calibri';
+    font-family: "calibri";
     font-size: 1rem;
 }
 
-#search-results{
+#search-results {
     max-height: 325px;
     overflow-y: auto;
     margin: 5px;
@@ -404,39 +433,52 @@ span:before{
 }
 
 @keyframes pulse {
-    0%,100% {transform: scale(1);}
-    50% {transform: scale(1.1);}
+    0%,
+    100% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.1);
+    }
 }
 
 .search-pannel {
     opacity: 1;
 }
 
-.search-pannel { animation: fadeIn 1s;}
+.search-pannel {
+    animation: fadeIn 1s;
+}
 @keyframes fadeIn {
-    0% { opacity: 0; }
-    50% { opacity: 0.5; }
-    100% { opacity: 1; }
+    0% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 0.5;
+    }
+    100% {
+        opacity: 1;
+    }
 }
 
-#sezione-mebri{
+#sezione-mebri {
     display: none;
 }
 
 /* Dimensioni in base allo schermo */
 
 @media (min-width: 800px) {
-	.header-navigation a {
-		display: inline-block;
-	}
+    .header-navigation a {
+        display: inline-block;
+    }
 
-	.header-navigation #search-form {
-		display: none;
-	}
+    .header-navigation #search-form {
+        display: none;
+    }
 }
 
 @media (min-height: 850px) {
-    #sezione-mebri{
+    #sezione-mebri {
         display: block;
     }
 }
@@ -447,117 +489,118 @@ span:before{
 
 footer {
     bottom: 0;
-  position: fixed;
-  width: 100%;
+    position: fixed;
+    width: 100%;
 
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 1), #46518A);
-  min-height: 75px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 1), #46518a);
+    min-height: 75px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .social-icon,
 .menu_info {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 2px 0;
-  flex-wrap: wrap;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 2px 0;
+    flex-wrap: wrap;
 }
 
 .social-icon__item,
 .menu__item {
-  list-style: none;
+    list-style: none;
 }
 
 .social-icon__link {
-  font-size: 1.5rem;
-  color: #F9FAFF;
-  margin: 0 10px;
-  display: inline-block;
-  transition: 0.5s;
+    font-size: 1.5rem;
+    color: #f9faff;
+    margin: 0 10px;
+    display: inline-block;
+    transition: 0.5s;
 }
 .social-icon__link:hover {
-  transform: translateY(-10px);
-  color: #46518A;
+    transform: translateY(-10px);
+    color: #46518a;
 }
 
 .menu__link {
-  font-size: 1.2rem;
-  color: #fff;
-  margin: 0 10px;
-  display: inline-block;
-  transition: 0.5s;
-  text-decoration: none;
-  opacity: 0.75;
-  font-weight: 300;
+    font-size: 1.2rem;
+    color: #fff;
+    margin: 0 10px;
+    display: inline-block;
+    transition: 0.5s;
+    text-decoration: none;
+    opacity: 0.75;
+    font-weight: 300;
 }
 
 .menu__link:hover {
-  opacity: 1;
+    opacity: 1;
 }
 
 .footer p {
-  color: #fff;
-  margin: 5px 0 5px 0;
-  font-size: 1rem;
-  font-weight: 300;
+    color: #fff;
+    margin: 5px 0 5px 0;
+    font-size: 1rem;
+    font-weight: 300;
 }
 
-.corp{
+.corp {
     height: 700px;
 }
 
 @media screen and (max-height: 1150px) {
-    .corp{
+    .corp {
         height: 450px;
     }
 }
 
-.img-thread{
-    max-width: 350px;  
+.img-thread {
     max-height: 350px;
-    min-width: 350px;  
-    min-height:350px;
-    object-fit:cover;
+    min-width: 350px;
+    min-height: 350px;
+    object-fit: cover;
     object-position: 50% 50%;
 }
 
 @media (max-width: 1200px) {
-    .sec-img{
-      display: none;
+    .sec-img {
+        display: none;
     }
 }
 
-.filter-container{
+.filter-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
 }
 
-.filter-container input{
-
+.filter-container input {
     box-shadow: 1px 1px 2rem rgba(0, 0, 0, 0.3);
 }
 
-.filter-container input:focus{
-    box-shadow: 0px 5px 1rem  rgba(0, 0, 0, 0.3);
+.filter-container input:focus {
+    box-shadow: 0px 5px 1rem rgba(0, 0, 0, 0.3);
     transition: all 0.2s ease-out;
     animation: pulse 3s infinite;
 }
 
-
-
 @keyframes pulse {
-    0%,100% {transform: scale(1);}
-    50% {transform: scale(1.1);}
+    0%,
+    100% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.1);
+    }
 }
 
-input{
+input {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
