--- a/ILovePizza/public/css/main.css
+++ b/ILovePizza/public/css/main.css
@@ -18,7 +18,7 @@ html {
 }
 
 header {
-    background-image: url("{{ asset('img/bg-pizza.png') }}" );
+    background-image: url("{{ asset('img/bg-pizza.jpg') }}" );
     background-position: center;
     background-size: cover;
     min-height: 75px;
